--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -179,6 +179,9 @@
                                 <rect key="frame" x="0.0" y="142" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="1vw-bk-mUS" id="3J5-AS-8GS"/>
+                                </connections>
                             </searchBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Exercícios" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKx-Br-fxz">
                                 <rect key="frame" x="20" y="103" width="109" height="30"/>
@@ -187,18 +190,55 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bvX-h5-luO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bvX-h5-luO">
                                 <rect key="frame" x="20" y="186" width="394" height="710"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="SAm-bq-eku">
-                                        <rect key="frame" x="0.0" y="44.5" width="394" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="customcell" rowHeight="115" id="SAm-bq-eku" customClass="CustomCell" customModule="ScolioKids" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="394" height="115"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SAm-bq-eku" id="utu-wA-3oP">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="115"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GZx-A9-lyc">
+                                                    <rect key="frame" x="5" y="5" width="384" height="105"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="USR-oT-MPf">
+                                                            <rect key="frame" x="0.0" y="22.5" width="60" height="60"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="60" id="DYj-hK-kYj"/>
+                                                                <constraint firstAttribute="width" constant="60" id="HxH-lJ-cKd"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wBM-yi-fvr">
+                                                            <rect key="frame" x="194" y="23" width="71" height="61"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="USR-oT-MPf" firstAttribute="centerY" secondItem="GZx-A9-lyc" secondAttribute="centerY" id="Ks6-Fz-ctZ"/>
+                                                        <constraint firstItem="USR-oT-MPf" firstAttribute="leading" secondItem="GZx-A9-lyc" secondAttribute="leading" id="mX5-U8-rlt"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="GZx-A9-lyc" secondAttribute="trailing" constant="5" id="Fcx-6T-sqx"/>
+                                                <constraint firstAttribute="bottom" secondItem="GZx-A9-lyc" secondAttribute="bottom" constant="5" id="Yf6-XM-1Ze"/>
+                                                <constraint firstItem="GZx-A9-lyc" firstAttribute="leading" secondItem="utu-wA-3oP" secondAttribute="leading" constant="5" id="f8E-s7-0Jz"/>
+                                                <constraint firstItem="GZx-A9-lyc" firstAttribute="top" secondItem="utu-wA-3oP" secondAttribute="top" constant="5" id="oB1-g3-PCY"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ExerciciosEspView" destination="utu-wA-3oP" id="cBH-0c-FNu"/>
+                                            <outlet property="assetsImg" destination="USR-oT-MPf" id="YDV-En-Zl0"/>
+                                            <outlet property="nameLabel" destination="wBM-yi-fvr" id="mby-Tq-P89"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -208,7 +248,11 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="UWR-n9-n7U">
-                        <barButtonItem key="rightBarButtonItem" title="Selecionar" id="REA-yK-79Z"/>
+                        <barButtonItem key="rightBarButtonItem" title="Selecionar" id="REA-yK-79Z">
+                            <connections>
+                                <action selector="seleciona:" destination="1vw-bk-mUS" id="VXj-Gb-pqQ"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
